# StarFlow

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/static/images/: dataset_creation.avif
installer/deepseek/: install.sh  requirements.txt
installer/default/: install.sh  requirements.txt
installer/phi35/: install.sh  requirements.txt
installer/phi4/: install.sh  requirements.txt
installer/vllm/: install.sh  requirements.txt
starflow/: utils.py
starflow/config/dataset/: bigdocs_sketch2flow.yaml
starflow/config/model/: claude_37_sonnet.yaml  deepseek_vl2.yaml  deepseek_vl2_small.yaml  deepseek_vl2_tiny.yaml  gemini_20_flash.yaml  gpt_4o.yaml  gpt_4o_mini.yaml  llama_32_11b.yaml  llama_32_90b.yaml  phi_35_4b.yaml  phi_4_6b.yaml  pixtral_12b.yaml  qwen_25_vl_32b.yaml  qwen_25_vl_3b.yaml  qwen_25_vl_72b.yaml  qwen_25_vl_7b.yaml  vllm_llama_32_11b.yaml  vllm_llama_32_90b.yaml  vllm_qwen_25_vl_32b.yaml  vllm_qwen_25_vl_3b.yaml  vllm_qwen_25_vl_72b.yaml  vllm_qwen_25_vl_7b.yaml
starflow/config/pipeline/: evaluate.yaml  evaluate_api.yaml  train.yaml
starflow/dataset/: base.py  bigdocs.py  utils.py  vl_dataset.py
starflow/dataset/metric/: base.py  flow_bleu.py  flow_match.py  flow_similarity.py  utils.py  vl_metric.py
starflow/dataset/vl_datasets/: bigdocs.py  screenspot.py  uground.py
starflow/model/: base.py  deepseek_vl2.py  llama_32.py  openai.py  phi_35.py  phi_4.py  pixtral.py  qwen_25.py  utils.py  vl_api_model.py  vl_model.py
starflow/model/vl_api_models/: openrouter.py
starflow/model/vl_models/: deepseek.py  llama.py  llama32.py  phi.py  phi35.py  phi4.py  pixtral.py  qwen.py  qwen25.py
starflow/pipeline/: evaluate.py  evaluate_api.py  train.py  utils.py
starvlm/: utils.py
starvlm/config/dataset/: bigdocs_sketch2flow.yaml
starvlm/config/model/: claude_37_sonnet.yaml  deepseek_vl2.yaml  deepseek_vl2_small.yaml  deepseek_vl2_tiny.yaml  gemini_20_flash.yaml  gemma_3_12b.yaml  gemma_3_27b.yaml  gemma_3_4b.yaml  (+25 more)
starvlm/dataset/: base.py  bigdocs.py
starvlm/model/: base.py  deepseek_vl2.py  gemma_3.py  llama_32.py  openai.py  phi_35.py  phi_4.py  pixtral.py  qwen_25.py  qwen_3.py
starvlm/pipeline/: evaluate_api.py  evaluate_local.py  train_fsdp.py  utils.py
(+16 files in other folders)
